#1 added colors, fonts and default varibles to the scss

--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -41,18 +41,15 @@
 
 // Custom Layout & components
 @import "root";
-@import "components/navbar";
-@import "components/links";
-@import "components/masthead";
-@import "components/hero";
-@import "components/footer";
-@import "components/blocks";
-@import "components/cards";
-@import "components/carousel";
-@import "components/parts";
-
-// Pages
-@import "pages/project-details";
+//@import "components/navbar";
+//@import "components/links";
+//@import "components/masthead";
+//@import "components/hero";
+//@import "components/footer";
+//@import "components/blocks";
+//@import "components/cards";
+//@import "components/carousel";
+//@import "components/parts";
 
 // Helpers
 @import "~bootstrap/scss/helpers";
