--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -60,65 +60,21 @@ $colors: (
 ) !default;
 // scss-docs-end colors-map
 
-$primary:           rgb(55, 87, 251) !default;
-$primary-100:       rgb(5, 44, 240) !default;
-$primary-200:       rgb(4, 35, 192) !default;
-
-$secondary:         rgb(131, 152, 255) !default;
-$secondary-100:     rgb(55, 88, 255) !default;
-$secondary-200:     rgb(0, 41, 249) !default;
-$secondary-light:   rgb(231, 235, 255) !default;
-
-$tertiary:          rgb(220, 240, 251) !default;
-$tertiary-100:      rgb(134, 204, 241) !default;
-$tertiary-200:      rgb(69, 176, 233) !default;
-
-$quaternary:        rgb(255, 49, 90) !default;
-$quaternary-100:    rgb(245, 0, 49) !default;
-$quaternary-200:    rgb(196, 0, 39) !default;
-$quaternary-light:  rgb(255, 228, 234) !default;
-
-$quinary:           rgb(163, 163, 163) !default;
-$senary:            rgb(246, 247, 251) !default;
-
-$septenary:         rgb(5, 10, 35) !default;
-$septenary-100:     rgb(4, 8, 29) !default;
-$septenary-200:     rgb(3, 6, 22) !default;
+$primary:           rgb(246, 158, 123) !default;
+$secondary:         rgb(128, 140, 108) !default;
+$tertiary:          rgb(56, 62, 86) !default;
 
 $success:           $green !default;
 $info:              $cyan !default;
 $warning:           $yellow !default;
 $danger:            $red !default;
 $light:             $gray-100 !default;
-$dark:              $gray-800 !default;
-
-$job-full-time:     $primary !default;
-$job-part-time:     rgb(160, 0, 253) !default;
-$job-internship:    rgb(255, 128, 37) !default;
-
-$travel-vacation:   $job-internship !default;
-$travel-city-trip:  $job-part-time !default;
+$dark:              rgb(51, 51, 51) !default;
 
 $theme-colors: (
   "primary":        $primary,
-  "primary-100":    $primary-100,
-  "primary-200":    $primary-200,
   "secondary":      $secondary,
-  "secondary-100":  $secondary-100,
-  "secondary-200":  $secondary-200,
-  "secondary-light":$secondary-light,
   "tertiary":       $tertiary,
-  "tertiary-100":   $tertiary-100,
-  "tertiary-200":   $tertiary-200,
-  "quaternary":     $quaternary,
-  "quaternary-100": $quaternary-100,
-  "quaternary-200": $quaternary-200,
-  "quaternary-light":$quaternary-light,
-  "quinary":        $quinary,
-  "senary":         $senary,
-  "septenary":      $septenary,
-  "septenary-100":  $septenary-100,
-  "septenary-200":  $septenary-200,
   "success":        $success,
   "info":           $info,
   "warning":        $warning,
@@ -192,8 +148,8 @@ $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) 
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $senary !default;
-$body-color:                $septenary !default;
+$body-bg:                   $white !default;
+$body-color:                $dark !default;
 $body-text-align:           null !default;
 
 
@@ -326,7 +282,7 @@ $embed-responsive-aspect-ratios: (
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-primary:         "Gilroy", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-primary:         "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-sans-serif:      $font-family-primary;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 // stylelint-enable value-keyword-case
