--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -43,7 +43,7 @@
 @import "root";
 //@import "components/navbar";
 //@import "components/links";
-//@import "components/masthead";
+@import "components/masthead";
 //@import "components/hero";
 //@import "components/footer";
 //@import "components/blocks";
