--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -204,9 +204,7 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 540px,
   md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
+  lg: 960px
 ) !default;
 // scss-docs-end container-max-widths
 
