#1 updated cols arrangement to improve base skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,13 @@
 </nav>
 <header class="masthead mb-n5">
   <div class="container">
-    <div class="row flex-column mb-5">
-      <div class="col-8">
+    <div class="row flex-column mb-3">
+      <div class="col-10">
         <h1 class="heading display-1">
           I build the digital future of tomorrow
         </h1>
       </div>
-      <div class="col-4">
+      <div class="col-8">
         <p class="introduction">
           Als jonge front-end developer, streef ik naar zelf ontwikkeling. Om mijn werk altijd met uiterse perfectie en
           de laatste technieken kan volbrengen.
@@ -35,7 +35,7 @@
       <div class="col-5">
         <div class="card">
           <div class="card-body">
-            <h4>Eenvoudige website <span class="font-weight-normal text-primary">op maat</span></h4>
+            <h5>Eenvoudige website <span class="font-weight-normal text-primary">op maat</span></h5>
             <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
           </div>
         </div>
@@ -43,7 +43,7 @@
       <div class="col-5">
         <div class="card">
           <div class="card-body">
-            <h4>Uitgebreide website <span class="font-weight-normal text-secondary">op maat</span></h4>
+            <h5>Uitgebreide website <span class="font-weight-normal text-secondary">op maat</span></h5>
             <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
           </div>
         </div>
@@ -63,19 +63,19 @@
     </div>
     <div class="row row-cols-3 mt-5">
       <div class="col">
-        <h4>Junior Front-end</h4>
+        <h5>Junior Front-end</h5>
         <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
         <span class="font-weight-bold text-primary">februari 2020 - heden</span>
       </div>
       <div class="col">
-        <h4>Junior Front-end</h4>
+        <h5>Junior Front-end</h5>
         <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
         <span class="font-weight-bold text-primary">september 2019 - januari 2020</span>
       </div>
       <div class="col">
-        <h4>Intern Front-end</h4>
+        <h5>Intern Front-end</h5>
         <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
         <span class="font-weight-bold text-primary">januari 2018 - februari 2019</span>
@@ -94,15 +94,15 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-5">
+      <div class="col-7">
         <p>Projecten waar ik trots op ben. Gemaakt met passie en op basis van de wensen en laatste trends.</p>
       </div>
     </div>
-    <div class="row row-cols-3 mt-5">
+    <div class="row row-cols-3">
       <div class="col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h4>ShareValue</h4>
+            <h5>ShareValue</h5>
             <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
             <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
@@ -112,7 +112,7 @@
       <div class="col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h4>PostPoint Training</h4>
+            <h5>PostPoint Training</h5>
             <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
             <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
@@ -122,7 +122,7 @@
       <div class="col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h4>BURGR.</h4>
+            <h5>BURGR.</h5>
             <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
             <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
@@ -143,16 +143,16 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-5">
+      <div class="col-7">
         <p>Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen en de verhalen.</p>
       </div>
     </div>
-    <div class="row row-cols-3 mt-5">
+    <div class="row row-cols-3">
       <div class="col">
         <div class="card">
           <div class="card-body">
             <span>city-trip</span>
-            <h4>London</h4>
+            <h5>London</h5>
             <p>April 2024</p>
           </div>
         </div>
@@ -161,7 +161,7 @@
         <div class="card">
           <div class="card-body">
             <span>city-trip</span>
-            <h4>London</h4>
+            <h5>London</h5>
             <p>April 2024</p>
           </div>
         </div>
@@ -170,7 +170,7 @@
         <div class="card">
           <div class="card-body">
             <span>city-trip</span>
-            <h4>London</h4>
+            <h5>London</h5>
             <p>April 2024</p>
           </div>
         </div>
@@ -181,10 +181,10 @@
 <section>
   <div class="container py-6">
     <div class="row flex-column">
-      <div class="col-8">
+      <div class="col-10">
         <h2 class="display-5 mb-5">Duncan, de gedreven front-end developer uit Utrecht</h2>
       </div>
-      <div class="col-8">
+      <div class="col-10">
         <p>Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook een webdesigner in hart en nieren.
           Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
           het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
@@ -196,10 +196,10 @@
 <section class="bg-secondary text-white">
   <div class="container py-6">
     <div class="row flex-column">
-      <div class="col-6">
+      <div class="col-8">
         <h2 class="display-5 mb-5">Klaar voor jouw eigen unieke website?</h2>
       </div>
-      <div class="col-8">
+      <div class="col-10">
         <p class="mb-4">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook een webdesigner in hart en nieren.
           Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
           het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
@@ -215,18 +215,18 @@
 </section>
 <footer>
   <div class="container">
-    <div class="row py-6">
+    <div class="row gx-5 py-6">
       <div class="col">
         <h5>Duncan</h5>
       </div>
-      <div class="col-3">
+      <div class="col-auto">
         <ul>
           <li class="font-weight-bold">Contactgegevens</li>
           <li>hello@duncanheffron.com</li>
           <li>06-30406388</li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="col-auto">
         <ul>
           <li class="font-weight-bold">Links</li>
           <li>Dribbble</li>
@@ -237,7 +237,7 @@
     </div>
     <div class="row py-3">
       <div class="col-auto">
-        <span class="small">Build with ❤️ by Duncan</span>
+        <p class="small">Build with<span class="d-inline-flex mx-1" style="width: 1.2rem;">❤️</span>by Duncan</p>
       </div>
       <div class="col-auto">
         <a href="#" class="small">Privacy</a>
