#3 #5 Created styling for the masthead and custom links
Added a hover animation on the masthead cards. And custom animation styling on the links in the section headings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,11 +20,11 @@
   <div class="container">
     <div class="row flex-column mb-3">
       <div class="col-10">
-        <h1 class="heading display-1">
+        <h1 class="heading">
           I build the digital future of tomorrow
         </h1>
       </div>
-      <div class="col-8">
+      <div class="col-12">
         <p class="introduction">
           Als jonge front-end developer, streef ik naar zelf ontwikkeling. Om mijn werk altijd met uiterse perfectie en
           de laatste technieken kan volbrengen.
@@ -33,32 +33,38 @@
     </div>
     <div class="row">
       <div class="col-5">
-        <div class="card">
+        <div class="card mt-card">
           <div class="card-body">
-            <h5>Eenvoudige website <span class="font-weight-normal text-primary">op maat</span></h5>
-            <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
+            <a href="#" class="mt-card--link bg-primary text-white">Lees meer</a>
+            <div class="mt-card--content">
+              <h5 class="mt-card--heading">Eenvoudige website <span class="font-weight-normal text-primary">op maat</span></h5>
+              <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
+            </div>
           </div>
         </div>
       </div>
       <div class="col-5">
-        <div class="card">
+        <div class="card mt-card">
           <div class="card-body">
-            <h5>Uitgebreide website <span class="font-weight-normal text-secondary">op maat</span></h5>
-            <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
+            <a href="#" class="mt-card--link bg-secondary text-white">Lees meer</a>
+            <div class="mt-card--content">
+              <h5 class="mt-card--heading">Uitgebreide website <span class="font-weight-normal text-secondary">op maat</span></h5>
+              <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerk.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </header>
-<section class="bg-tertiary text-white pt-8 pb-6">
+<section class="mt-section bg-tertiary text-white pt-8 pb-6">
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h3>Meest relevante ervaringen</h3>
+        <h3 class="mb-0">Meest relevante ervaringen</h3>
       </div>
       <div class="col-auto">
-        <a href="#">Bekijk al mijn ervaringen</a>
+        <a href="#" class="mt-section--link text-white">Bekijk al mijn ervaringen</a>
       </div>
     </div>
     <div class="row row-cols-3 mt-5">
@@ -83,19 +89,19 @@
     </div>
   </div>
 </section>
-<section>
+<section class="mt-section">
   <div class="container py-6">
     <div class="row align-items-center">
       <div class="col">
-        <h3>Cases</h3>
+        <h3 class="mb-0">Cases</h3>
       </div>
       <div class="col-auto">
-        <a href="#">Bekijk al mijn cases</a>
+        <a href="#" class="mt-section--link text-dark">Bekijk al mijn cases</a>
       </div>
     </div>
     <div class="row">
       <div class="col-7">
-        <p>Projecten waar ik trots op ben. Gemaakt met passie en op basis van de wensen en laatste trends.</p>
+        <p class="mt-2 mb-3">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de wensen en laatste trends.</p>
       </div>
     </div>
     <div class="row row-cols-3">
@@ -132,19 +138,19 @@
     </div>
   </div>
 </section>
-<section class="bg-quaternary">
+<section class="mt-section bg-quaternary">
   <div class="container py-6">
     <div class="row align-items-center">
       <div class="col">
-        <h3>Travels</h3>
+        <h3 class="mb-0">Travels</h3>
       </div>
       <div class="col-auto">
-        <a href="#">Bekijk al mijn travels</a>
+        <a href="#" class="mt-section--link text-dark">Bekijk al mijn travels</a>
       </div>
     </div>
     <div class="row">
       <div class="col-7">
-        <p>Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen en de verhalen.</p>
+        <p class="mt-2 mb-3">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen en de verhalen.</p>
       </div>
     </div>
     <div class="row row-cols-3">
