--- a/src/assets/scss/components/_masthead.scss
+++ b/src/assets/scss/components/_masthead.scss
@@ -12,5 +12,24 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
+    .heading {
+      position: relative;
+      font-size: 4.5rem;
+
+      &::after {
+        content: url("~src/assets/images/shape-001.svg");
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: 3.5rem;
+      }
+    }
+
+    .introduction {
+      color: $quinary;
+      font-size: 1.125rem;
+      max-width: 52%;
+    }
   }
 }
