--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,8 +31,8 @@
         </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-5">
+    <div class="row gy-3 gy-lg-0">
+      <div class="col-12 col-lg-5">
         <div class="card mt-card">
           <div class="card-body">
             <a href="#" class="mt-card--link bg-primary text-white">Lees meer</a>
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="col-5">
+      <div class="col-12 col-lg-5">
         <div class="card mt-card">
           <div class="card-body">
             <a href="#" class="mt-card--link bg-secondary text-white">Lees meer</a>
@@ -61,30 +61,30 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h3 class="mb-0">Meest relevante ervaringen</h3>
+        <h3 class="mb-3 mb-lg-0">Meest relevante ervaringen</h3>
       </div>
       <div class="col-auto">
         <a href="#" class="mt-section--link text-white">Bekijk al mijn ervaringen</a>
       </div>
     </div>
-    <div class="row row-cols-3 mt-5">
-      <div class="col">
-        <h5>Junior Front-end</h5>
-        <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
+    <div class="row row-cols-1 row-cols-lg-3 mt-3 mt-lg-5 gy-4 gy-lg-0">
+      <div class="mt-section__col col">
+        <h5 class="mt-section__col-heading">Junior Front-end</h5>
+        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="font-weight-bold text-primary">februari 2020 - heden</span>
+        <span class="mt-section__col-date text-primary">februari 2020 - heden</span>
       </div>
-      <div class="col">
-        <h5>Junior Front-end</h5>
-        <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
+      <div class="mt-section__col col">
+        <h5 class="mt-section__col-heading">Junior Front-end</h5>
+        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="font-weight-bold text-primary">september 2019 - januari 2020</span>
+        <span class="mt-section__col-date text-primary">september 2019 - januari 2020</span>
       </div>
-      <div class="col">
-        <h5>Intern Front-end</h5>
-        <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
+      <div class="mt-section__col col">
+        <h5 class="mt-section__col-heading">Intern Front-end</h5>
+        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne
           webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="font-weight-bold text-primary">januari 2018 - februari 2019</span>
+        <span class="mt-section__col-date text-primary">januari 2018 - februari 2019</span>
       </div>
     </div>
   </div>
@@ -100,38 +100,41 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-7">
+      <div class="col-12 col-lg-7">
         <p class="mt-2 mb-3">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de wensen en laatste trends.</p>
       </div>
     </div>
-    <div class="row row-cols-3">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
+      <div class="mt-section__col col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h5>ShareValue</h5>
-            <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
+            <mt-sharevalue class="mt-section__col-brand" fillColor="currentColor"></mt-sharevalue>
+            <h5 class="mt-section__col-heading">ShareValue</h5>
+            <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
-            <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
+            <a class="mt-section__col-link text-tertiary" href="#">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="mt-section__col col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h5>PostPoint Training</h5>
-            <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
+            <mt-postnl class="mt-section__col-brand" fillColor="currentColor"></mt-postnl>
+            <h5 class="mt-section__col-heading">PostPoint Training</h5>
+            <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
-            <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
+            <a class="mt-section__col-link text-tertiary" href="#">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="mt-section__col col">
         <div class="card bg-primary text-white">
           <div class="card-body">
-            <h5>BURGR.</h5>
-            <p>Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
+            <mt-burger class="mt-section__col-brand" fillColor="currentColor"></mt-burger>
+            <h5 class="mt-section__col-heading">BURGR.</h5>
+            <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het
               interne</p>
-            <a class="font-weight-bold text-tertiary" href="#">Bekijk meer van de case</a>
+            <a class="mt-section__col-link text-tertiary" href="#">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
@@ -149,35 +152,35 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-7">
+      <div class="col-12 col-lg-7">
         <p class="mt-2 mb-3">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen en de verhalen.</p>
       </div>
     </div>
-    <div class="row row-cols-3">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
+      <div class="mt-section__col col">
         <div class="card">
           <div class="card-body">
-            <span>city-trip</span>
-            <h5>London</h5>
-            <p>April 2024</p>
+            <span class="mt-section__col-tag">city-trip</span>
+            <h5 class="mt-section__col-heading">London</h5>
+            <p class="mt-section__col-content">April 2024</p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="mt-section__col col">
         <div class="card">
           <div class="card-body">
-            <span>city-trip</span>
-            <h5>London</h5>
-            <p>April 2024</p>
+            <span class="mt-section__col-tag">city-trip</span>
+            <h5 class="mt-section__col-heading">London</h5>
+            <p class="mt-section__col-content">April 2024</p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="mt-section__col col">
         <div class="card">
           <div class="card-body">
-            <span>city-trip</span>
-            <h5>London</h5>
-            <p>April 2024</p>
+            <span class="mt-section__col-tag">city-trip</span>
+            <h5 class="mt-section__col-heading">London</h5>
+            <p class="mt-section__col-content">April 2024</p>
           </div>
         </div>
       </div>
@@ -187,10 +190,10 @@
 <section>
   <div class="container py-6">
     <div class="row flex-column">
-      <div class="col-10">
+      <div class="col-12 col-lg-10">
         <h2 class="display-5 mb-5">Duncan, de gedreven front-end developer uit Utrecht</h2>
       </div>
-      <div class="col-10">
+      <div class="col-12 col-lg-10">
         <p>Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook een webdesigner in hart en nieren.
           Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
           het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
@@ -202,16 +205,16 @@
 <section class="bg-secondary text-white">
   <div class="container py-6">
     <div class="row flex-column">
-      <div class="col-8">
+      <div class="col-12 col-lg-8">
         <h2 class="display-5 mb-5">Klaar voor jouw eigen unieke website?</h2>
       </div>
-      <div class="col-10">
+      <div class="col-12 col-lg-10">
         <p class="mb-4">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook een webdesigner in hart en nieren.
           Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
           het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
           genoemt, dit om code in meerdere locaties of projecten te gebruiken.</p>
       </div>
-      <div class="col-auto">
+      <div class="col-auto text-center text-lg-left">
         <button class="btn btn-tertiary rounded-pill">
           Kom in contact
         </button>
@@ -221,7 +224,7 @@
 </section>
 <footer>
   <div class="container">
-    <div class="row gx-5 py-6">
+    <div class="row px-5 py-6">
       <div class="col">
         <h5>Duncan</h5>
       </div>
