--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -41,6 +41,7 @@
 
 // Custom Layout & components
 @import "root";
+@import "components/links";
 @import "components/masthead";
 @import "components/cards";
 @import "components/sections";
