--- a/src/assets/scss/components/_sections.scss
+++ b/src/assets/scss/components/_sections.scss
@@ -2,49 +2,61 @@
   $self: &;
 
   #{$self}--link {
-    color: inherit;
-    text-decoration: none;
-    position: relative;
-    padding-right: 3.5rem;
-    font-weight: $font-weight-semibold;
+    @extend .mt-link;
+  }
 
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      height: 2px;
-      width: 0;
-      border-radius: 2rem;
-      background-color: $white;
-      bottom: -5px;
-      left: 50%;
-      transform: translateX(-50%);
-      transition: width .2s ease;
+  #{$self}__col {
+    & > .card {
+      @extend .mt-card;
+
+      .card-body {
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+      }
     }
 
-    &::after {
-      content: url("~src/assets/images/arrow-right-lg.svg");
-      position: absolute;
-      display: block;
-      height: 1.45rem;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
+    &-brand {
+      svg {
+        max-width: 100%;
+        max-height: 6.75rem;
+        padding: 1rem 2rem;
+        margin-bottom: 2rem;
+      }
     }
 
-    &.text-dark {
+    &-heading {
+      margin-bottom: .625rem;
+    }
+
+    &-content {
+      opacity: .75;
+      font-size: .875rem;
+      margin-bottom: 0;
+    }
+
+    &-date {
+      font-weight: $font-weight-semibold;
+      display: block;
+      font-size: .75rem;
+      margin-top: 1.25rem;
+    }
+
+    &-link {
+      @extend .mt-link;
+      font-size: .75rem;
+      padding-right: 1.75rem;
+      margin-top: 1.25rem;
+      align-self: flex-start;
+
       &::before {
-        background-color: $dark;
+        background-color: $tertiary;
       }
 
       &::after {
-        content: url("~src/assets/images/arrow-right-lg-dark.svg");
-      }
-    }
-
-    &:hover {
-      &::before {
-        width: 100%;
+        content: url("~src/assets/images/arrow-right-tertiary-sm.svg");
+        height: 1.1rem;
       }
     }
   }
