--- a/src/assets/scss/components/_cards.scss
+++ b/src/assets/scss/components/_cards.scss
@@ -51,7 +51,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-image: url("~src/assets/images/arrow-right-light-sm.svg");
+        background-image: url("~src/assets/images/arrow-right-sm-light.svg");
         background-repeat: no-repeat;
         background-position: center;
         z-index: 1;
@@ -85,5 +85,11 @@
         }
       }
     }
+  }
+
+  .card-footer {
+    background-color: transparent;
+    border: none;
+    padding: 0 1.5rem 1.5rem;
   }
 }
