#10 did base for the footer, added some custom btn styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
     <div class="row flex-column mb-3">
       <div class="col-10">
         <h1 class="heading">
-          I build the digital future of tomorrow <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
+          I build the digital future of tomorrow
+          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
         </h1>
       </div>
       <div class="col-12">
@@ -108,7 +109,8 @@
     </div>
     <div class="row">
       <div class="col-12 col-lg-7">
-        <p class="mt-3 mt-lg-3 mb-4 text-quinary">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de wensen
+        <p class="mt-3 mt-lg-3 mb-4 text-quinary">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de
+          wensen
           en laatste trends.</p>
       </div>
     </div>
@@ -173,7 +175,8 @@
     </div>
     <div class="row">
       <div class="col-12 col-lg-7">
-        <p class="mt-3 mt-lg-2 mb-4 text-quinary">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen en de
+        <p class="mt-3 mt-lg-2 mb-4 text-quinary">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen
+          en de
           verhalen.</p>
       </div>
     </div>
@@ -215,10 +218,13 @@
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row flex-column">
       <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__about-heading mb-5">Duncan, de gedreven front-end developer uit Utrecht <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape></h2>
+        <h2 class="display-5 mt-section__about-heading mb-5">Duncan, de gedreven front-end developer uit Utrecht
+          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
+        </h2>
       </div>
       <div class="col-12 col-lg-8">
-        <p class="text-quinary mb-10 mb-lg-0">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook een webdesigner
+        <p class="text-quinary mb-10 mb-lg-0">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook
+          een webdesigner
           in hart en nieren.
           Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
           het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
@@ -232,40 +238,50 @@
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row flex-column">
       <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__cta-heading mb-5 text-center text-lg-left">Klaar voor jouw eigen unieke website? <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape></h2>
+        <h2 class="display-5 mt-section__cta-heading mb-5 text-center text-lg-left">Klaar voor jouw eigen unieke
+          website?
+          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
+        </h2>
       </div>
       <div class="col-12 col-lg-8">
-        <p class="mb-4 text-center text-lg-left">Een sterke website begint met een goed gesprek. Daarom start ik altijd met een goed gesprek over
+        <p class="mb-4 text-center text-lg-left">Een sterke website begint met een goed gesprek. Daarom start ik altijd
+          met een goed gesprek over
           jouw wensen.</p>
       </div>
       <div class="col-auto text-center text-lg-left">
-        <button class="btn btn-tertiary rounded-pill mb-6 mb-lg-0">
+        <a href="#" class="btn btn-tertiary rounded-pill mt-button--arrow mb-6 mb-lg-0">
           Kom in contact
-        </button>
+        </a>
       </div>
       <img class="mt-section__cta-image" src="../assets/images/cta-shape.png" alt="cta-sphere">
     </div>
   </div>
 </section>
-<footer>
+<footer class="mt-footer">
   <div class="container gx-5 gx-lg-1">
-    <div class="row px-5 px-lg-1 pt-6 pb-4 pb-lg-6">
+    <div class="row gx-6 px-5 px-lg-1 pt-5 pb-3">
       <div class="col text-center text-lg-left mb-5 mb-lg-0">
         <h5>Duncan</h5>
       </div>
       <div class="col-auto">
-        <ul>
-          <li class="font-weight-bold">Contactgegevens</li>
-          <li>hello@duncanheffron.com</li>
-          <li>06-30406388</li>
+        <ul class="mt-footer__nav">
+          <li>Contactgegevens</li>
+          <li><a href="mailto:hello@duncanheffron.com" title="Send me a mail!">hello@duncanheffron.com</a></li>
+          <li><a href="https://api.whatsapp.com/send?phone=+310630406388" target="_blank" title="Whatsapp me!">06-30406388</a>
+          </li>
         </ul>
       </div>
       <div class="col-auto">
-        <ul>
-          <li class="font-weight-bold">Links</li>
-          <li>Dribbble</li>
-          <li>Instagram</li>
-          <li>Contact</li>
+        <ul class="mt-footer__nav">
+          <li>Links</li>
+          <li><a href="https://github.com/duncanheffron/mountain" target="_blank" title="Checkout my GitHub repo's">GitHub</a>
+          </li>
+          <li><a href="https://dribbble.com/duncanheffron" target="_blank"
+                 title="My Dribbble is full of amazing projects and inspiration">Dribbble</a></li>
+          <li><a href="https://www.instagram.com/duncan.developer/" target="_blank" title="Follow me on instagram?">Instagram</a>
+          </li>
+          <li><a href="https://www.linkedin.com/in/duncanschriel/" target="_blank"
+                 title="Linked In the place for the peeps who want to connect!">Linked In</a></li>
         </ul>
       </div>
     </div>
