--- a/src/assets/scss/components/_cards.scss
+++ b/src/assets/scss/components/_cards.scss
@@ -3,8 +3,8 @@
 
   border: none;
   border-radius: .9375rem;
-  box-shadow: 0 3px 20px 0 rgba(0,0,0,.16);
   overflow: hidden;
+  @include mt-box-shadow();
 
   .card-body {
     padding: 2rem 1.5rem 1.5rem;
