--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,300 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand font-weight-bold" href="#">Duncan</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="#" class="nav-link">my work</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">about</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<header class="masthead mb-n5">
-  <div class="container">
-    <div class="row flex-column mb-3">
-      <div class="col-10">
-        <h1 class="heading">
-          I build the digital future of tomorrow
-          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
-        </h1>
-      </div>
-      <div class="col-12">
-        <p class="introduction">
-          Als jonge front-end developer, streef ik naar zelf ontwikkeling. Om mijn werk altijd met uiterse perfectie en
-          de laatste technieken kan volbrengen.
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-lg-5">
-        <div class="card mt-card">
-          <div class="card-body">
-            <a href="#" class="mt-card--link bg-primary text-white">Lees meer</a>
-            <div class="mt-card--content">
-              <h5 class="mt-card--heading">Eenvoudige website <span
-                class="font-weight-normal text-primary">op maat</span></h5>
-              <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb
-                ik ook gewerk.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-5 d-none d-lg-flex">
-        <div class="card mt-card">
-          <div class="card-body">
-            <a href="#" class="mt-card--link bg-secondary text-white">Lees meer</a>
-            <div class="mt-card--content">
-              <h5 class="mt-card--heading">Uitgebreide website <span
-                class="font-weight-normal text-secondary">op maat</span></h5>
-              <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb
-                ik ook gewerk.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-<section class="mt-section bg-tertiary text-white pt-7 pt-lg-8 pb-6">
-  <div class="container gx-5 gx-lg-1">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg">
-        <h3 class="mb-3 mb-lg-0">Meest relevante ervaringen</h3>
-      </div>
-      <div class="col-12 col-lg-auto">
-        <a href="#" class="mt-link mt-link-lg text-white">Bekijk al mijn ervaringen</a>
-      </div>
-    </div>
-    <div class="row row-cols-1 row-cols-lg-3 mt-3 mt-lg-5 gx-lg-6 gy-4 gy-lg-0">
-      <div class="mt-section__col col">
-        <h5 class="mt-section__col-heading">Junior Front-end</h5>
-        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast
-          heb ik ook gewerkt in het interne
-          webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="mt-section__col-date text-primary">februari 2020 - heden</span>
-      </div>
-      <div class="mt-section__col col">
-        <h5 class="mt-section__col-heading">Junior Front-end</h5>
-        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast
-          heb ik ook gewerkt in het interne
-          webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="mt-section__col-date text-primary">september 2019 - januari 2020</span>
-      </div>
-      <div class="mt-section__col col">
-        <h5 class="mt-section__col-heading">Intern Front-end</h5>
-        <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast
-          heb ik ook gewerkt in het interne
-          webteam om de site naar de nieuwe standaart te brengen.</p>
-        <span class="mt-section__col-date text-primary">januari 2018 - februari 2019</span>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section">
-  <div class="container gx-5 gx-lg-1 py-6">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg">
-        <h3 class="mb-3 mb-lg-0">Cases</h3>
-      </div>
-      <div class="col-12 col-lg-auto">
-        <a href="#" class="mt-link mt-link-lg text-dark">Bekijk al mijn cases</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-lg-7">
-        <p class="mt-3 mt-lg-3 mb-4 text-quinary">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de
-          wensen
-          en laatste trends.</p>
-      </div>
-    </div>
-    <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
-      <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
-          <div class="card-body">
-            <mt-sharevalue class="mt-section__col-brand" fillColor="currentColor"></mt-sharevalue>
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">ShareValue</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
-          <div class="card-body">
-            <mt-postnl class="mt-section__col-brand" fillColor="currentColor"></mt-postnl>
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">PostPoint Training</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
-          <div class="card-body">
-            <mt-burger class="mt-section__col-brand" fillColor="currentColor"></mt-burger>
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">BURGR.</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section bg-quaternary">
-  <div class="container gx-5 gx-lg-1 py-6">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg">
-        <h3 class="mb-3 mb-lg-0">Travels</h3>
-      </div>
-      <div class="col-12 col-lg-auto">
-        <a href="#" class="mt-link mt-link-lg text-dark">Bekijk al mijn travels</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-lg-7">
-        <p class="mt-3 mt-lg-2 mb-4 text-quinary">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen
-          en de
-          verhalen.</p>
-      </div>
-    </div>
-    <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
-      <div class="mt-section__col col">
-        <div class="card">
-          <div class="card-body">
-            <span class="mt-section__col-tag">city-trip</span>
-            <h5 class="mt-section__col-heading">London</h5>
-            <p class="mt-section__col-content">April 2024</p>
-            <mt-london class="text-secondary" fillColor="currentColor"></mt-london>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card">
-          <div class="card-body">
-            <span class="mt-section__col-tag">city-trip</span>
-            <h5 class="mt-section__col-heading">London</h5>
-            <p class="mt-section__col-content">April 2024</p>
-            <mt-london class="text-tertiary" fillColor="currentColor"></mt-london>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card">
-          <div class="card-body">
-            <span class="mt-section__col-tag">city-trip</span>
-            <h5 class="mt-section__col-heading">London</h5>
-            <p class="mt-section__col-content">April 2024</p>
-            <mt-london class="text-secondary" fillColor="currentColor"></mt-london>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section mt-section__about">
-  <div class="container gx-5 gx-lg-1 py-6">
-    <div class="row flex-column">
-      <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__about-heading mb-5">Duncan, de gedreven front-end developer uit Utrecht
-          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
-        </h2>
-      </div>
-      <div class="col-12 col-lg-8">
-        <p class="text-quinary mb-10 mb-lg-0">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook
-          een webdesigner
-          in hart en nieren.
-          Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
-          het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
-          genoemt, dit om code in meerdere locaties of projecten te gebruiken.</p>
-      </div>
-      <img class="mt-section__about-image" src="../assets/images/aboutme-cartoon.png" alt="aboutme-cartoon">
-    </div>
-  </div>
-</section>
-<section class="mt-section mt-section__cta">
-  <div class="container gx-5 gx-lg-1 py-6">
-    <div class="row flex-column">
-      <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__cta-heading mb-5 text-center text-lg-left">Klaar voor jouw eigen unieke
-          website?
-          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
-        </h2>
-      </div>
-      <div class="col-12 col-lg-8">
-        <p class="mb-4 text-center text-lg-left">Een sterke website begint met een goed gesprek. Daarom start ik altijd
-          met een goed gesprek over
-          jouw wensen.</p>
-      </div>
-      <div class="col-auto text-center text-lg-left">
-        <a href="#" class="btn btn-tertiary rounded-pill mt-button--arrow mb-6 mb-lg-0">
-          Kom in contact
-        </a>
-      </div>
-      <img class="mt-section__cta-image" src="../assets/images/cta-shape.png" alt="cta-sphere">
-    </div>
-  </div>
-</section>
-<footer class="mt-footer">
-  <div class="container gx-5 gx-lg-1">
-    <div class="row gx-6 px-5 px-lg-1 pt-5 pb-3">
-      <div class="col text-center text-lg-left mb-5 mb-lg-0">
-        <h5>Duncan</h5>
-      </div>
-      <div class="col-auto">
-        <ul class="mt-footer__nav">
-          <li>Contactgegevens</li>
-          <li><a href="mailto:hello@duncanheffron.com" title="Send me a mail!">hello@duncanheffron.com</a></li>
-          <li><a href="https://api.whatsapp.com/send?phone=+310630406388" target="_blank" title="Whatsapp me!">06-30406388</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-auto">
-        <ul class="mt-footer__nav">
-          <li>Links</li>
-          <li><a href="https://github.com/duncanheffron/mountain" target="_blank" title="Checkout my GitHub repo's">GitHub</a>
-          </li>
-          <li><a href="https://dribbble.com/duncanheffron" target="_blank"
-                 title="My Dribbble is full of amazing projects and inspiration">Dribbble</a></li>
-          <li><a href="https://www.instagram.com/duncan.developer/" target="_blank" title="Follow me on instagram?">Instagram</a>
-          </li>
-          <li><a href="https://www.linkedin.com/in/duncanschriel/" target="_blank"
-                 title="Linked In the place for the peeps who want to connect!">Linked In</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="row justify-content-center justify-content-lg-start py-3">
-      <div class="col-12 col-lg-auto text-center text-lg-left">
-        <p class="small">Build with<span class="d-inline-flex mx-1" style="width: 1.2rem;">❤️</span>by Duncan</p>
-      </div>
-      <div class="col-auto">
-        <a href="#" class="small">Privacy</a>
-      </div>
-      <div class="col-auto">
-        <a href="#" class="small">Contact</a>
-      </div>
-    </div>
-  </div>
-</footer>
+<mt-navbar></mt-navbar>
+<mt-masthead></mt-masthead>
+<mt-experience></mt-experience>
+<mt-cases></mt-cases>
+<mt-travels></mt-travels>
+<mt-about></mt-about>
+<mt-cta></mt-cta>
+<mt-footer></mt-footer>
